--- a/public/mom.html
+++ b/public/mom.html
@@ -125,7 +125,7 @@
 			</div>
 
 			<!-- end of row -->
-			<div class="row" style="display: flex;justify-content: space-around;width: 95%;margin: 0 auto">
+			<div class="row" style="display: flex;justify-content: space-around;width: 90%;margin: 0 auto">
 				<!-- Card -->
 				<div class="card">
 					<div class="card-image">
@@ -260,7 +260,7 @@
 				<!-- end of card -->
 
 				<!-- Card -->
-				<div class="card">
+				<!-- <div class="card">
 					<div class="card-image">
 						<img class="img-fluid" src="../images/services-3.jpg" alt="alternative">
 					</div>
@@ -282,11 +282,8 @@
 							</li>
 						</ul>
 					</div>
-					<!-- <div class="button-container">
-      						<a class="btn-solid-reg page-scroll" href="#callMe">详情</a>
-      					</div> -->
-					<!-- end of button-container -->
-				</div>
+		 
+				</div> -->
 				<!-- end of card -->
 
 
