--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
 		<link href="css/magnific-popup.css" rel="stylesheet">
 		<link href="css/styles.css" rel="stylesheet">
 		<!-- Favicon  -->
-		<link rel="icon" href="images/favicon.png">
+		<!-- <link rel="icon" href="images/favicon.png">、 -->
+		<script src="js/wow.min.js"></script>
+		<script>
+			new WOW().init();
+		</script>
 	</head>
 
 	<body data-spy="scroll" data-target=".fixed-top">
@@ -110,7 +114,8 @@
 							<div class="col-lg-12">
 								<div class="text-container">
 									<h1 style="font-size: 50px;">数字化的时代</h1>
-									<h1 style="font-size: 50px;line-height: 1.5;">企业管理流程、管理软件、运营数据是企业的核心竞争力,需要掌握在制造企业自己手中</h1>
+									<h1 style="font-size: 50px;line-height: 1.5;">
+										企业管理流程、管理软件、运营数据是企业的核心竞争力,需要掌握在制造企业自己手中</h1>
 									<!-- <h1 style="font-size: 50px;"></h1> -->
 									<!-- <h1><span id="js-rotating">需要掌握在制造企业自己手中</span></h1> -->
 									<!-- <p class="p-heading p-large">--- 20 年+深耕工业电气行业精益数字化</p> -->
@@ -201,7 +206,7 @@
 				</span>配置化MOM 软件系统模板</h2>
 		</div>
 
-<!-- 
+		<!-- 
 		<div class="container" id="LINXPaaS">
 			<h2 style="text-align: center;margin: 100px 0;">传统开发模式 VS   LINXPaaS 自主模式</h2>
 			<div class="LINXPaaCard">
