--- a/public/programme.html
+++ b/public/programme.html
@@ -117,7 +117,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12">
-						<h2>工业电气MOM 解决方案</h2>
+						<h2>工业电气解决方案的领导者</h2>
 					</div>
 					<!-- end of col -->
 				</div>
@@ -188,14 +188,14 @@
 							</div>
 						</div>
 
-						<div class="card  animate__animated animate__backInLeft">
+						<!-- <div class="card  animate__animated animate__backInLeft">
 							<div class="card-image">
 								<img class="img-fluid" src="../images/jcq.png" alt="alternative">
 							</div>
 							<div class="card-body" style="height: 80px;">
 								<h4 class="card-title">接触器</h4>
 							</div>
-						</div>
+						</div> -->
 
 						<div class="card  animate__animated animate__backInLeft">
 							<div class="card-image">
